<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_home">Hjem</string>
    <string name="title_calendar">Kalender</string>


    // Nye strings
    <string name="btnToday">I DAG</string>
    <string name="btnThisWeek">DENNE UKA</string>
    <string name="todoItem">Vaske bilen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task">Gjøremål:</string>
    <string name="task_name">Navn på gjøremål</string>
    <string name="date">Dato:</string>
    <string name="category_comment">Kommentar:</string>
    <string name="create_task">Opprett gjøremål</string>
    <string name="choose">Velg</string>
    <string name="deadline_date">Frist / dato</string>
    <string name="task_input">Navn på gjøremål</string>
    <string name="add_comment">Legg til en kommentar</string>
    <string name="pick_time">Velg</string>
    <string name="tid">Tid:</string>
    <string name="choose_time">Legg til klokkeslett</string>
    <string name="hour">Klokkeslett</string>
    <string name="category">Kategori</string>

    <string name="name_of_category">Navn på kategori</string>
    <string name="create_category">Opprett kategori</string>
    <string name="legg_til_oppgave">Legg til oppgave</string>
    <string name="add_category">add_category</string>
    <string name="choose_category">Velg kategori:</string>
    <string name="edit_category_text">Rediger kategori</string>
    <string name="delete_category_text">Slett kategori</string>
    <string name="update_category">Oppdater kategori</string>
    <string name="destination_update_category">Oppdater kategori</string>
    <string name="title_tasks">Oppgaver</string>
    <string name="add_task">Legg til oppgave</string>
    <string name="new_task">Ny oppgave</string>
    <string name="date_picker">Velg dato</string>
    <string name="time_picker">Velg tid</string>
    <string name="destination_create_category">Opprett kategori</string>
    <string name="from_date">Fra:</string>
    <string name="to_date">Til:</string>
    <string name="delete_checked">Slett valgte gjøremål</string>
    <string name="show_tasks">Vis oppgaver</string>

</resources>