<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateTaskFragment">

    <TextView
        android:id="@+id/task"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/task_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_input"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task" />

    <TextView
        android:id="@+id/pick_category"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/choose_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_input" />

    <Spinner
        android:id="@+id/pick_category_spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_category" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_category_spinner" />

    <Button
        android:id="@+id/pick_date_create_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:padding="0dp"
        android:text="@string/choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintBottom_toBottomOf="@id/date_input"
        />

    <EditText
        android:id="@+id/date_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/deadline_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pick_date_create_task_btn"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/choose_time"
        android:text="@string/tid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_input" />

    <Button
        android:id="@+id/pick_time_create_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:padding="0dp"
        android:text="@string/pick_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintBottom_toBottomOf="@id/time_input"
        />

    <EditText
        android:id="@+id/time_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:minHeight="48dp"
        android:hint="@string/hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pick_time_create_task_btn"
        app:layout_constraintTop_toBottomOf="@id/time" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/category_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_input" />

    <EditText
        android:id="@+id/comment_input"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:hint="@string/add_comment"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment" />

    <Button
        android:id="@+id/create_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="opprett_gjøremål"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>